# mlops-rust

./: Cargo.toml  Dockerfile  Makefile  compose.yaml  lyrics.txt  model.pkl  settings.yaml
.github/workflows/: docker-publish.yml
src/: lib.rs  main.rs  model.rs  web.rs
tests/: test.csv  test_lib.rs
