[package]
name = "mlops-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.5.1", features=["derive"]}
hf-hub = "0.3.2"
linfa = "0.7.0"
linfa-logistic = "0.7.0"
ndarray = "0.15.6"
polars = {version="0.38.2", features=["polars-ops", "to_dummies", "ndarray"]}
polars-core = "0.38.2"
polars-io = "0.38.2"
rand = "0.8.5"
sqlite = "0.33.0"
